--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="content">
         <h3>krishnapal sendhav</h3>
         <p>i am a student</p>
-        <a href="#" class="btn">download CV</a>
+        <a href="https://drive.google.com/file/d/1P0HNMziMXWadO4aSCSB1qtEUR48ZnkyE/view?usp=sharing" class="btn">download CV</a>
     </div>
 
     <div class="share">
@@ -79,16 +79,16 @@
                 <p>years of experience</p>
             </div>
             <div class="box">
-                <h3>450+</h3>
-                <p>satisfied clients</p>
+                <h3>10+</h3>
+                <p>projects completed</p>
             </div>
             <div class="box">
                 <h3>190+</h3>
                 <p>working hours</p>
             </div>
             <div class="box">
-                <h3>10+</h3>
-                <p>awards won</p>
+                <h3>5+</h3>
+                <p>certificate gain</p>
             </div>
         </div>
 
