--- a/index.html
+++ b/index.html
@@ -133,44 +133,44 @@
 
 <section class="services" id="services">
 
-    <h1 class="heading"> my <span>services</span> </h1>
+    <h1 class="heading"><span>Technologies</span> known </h1>
 
     <div class="box-container">
 
         <div class="box">
             <i class="fas fa-code"></i>
             <h3>java</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>java is object oriented programming language, with help of OOPs i have completed couple of projects like gun game</p>
         </div>
 
         <div class="box">
             <i class="fas fa-paint-brush"></i>
             <h3>flutter</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>flutter is used to develop cross platform applications, using this framework i had made many apps like Musify, hidden gems etc.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-mobile"></i>
-            <h3>Mobile Development</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <h3>Android Studio</h3>
+            <p>Android Studio is IDE for developing native android app . I had learned it from an online training from intershala like done project like Book hub</p>
         </div>
 
         <div class="box">
             <i class="fab fa-github-alt"></i>
             <h3>git hub</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>GitHub, Inc. is a provider of Internet hosting for software development and version control using Git.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-server"></i>
             <h3>firebase</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>firebase is an databse introduced by google. Gain an certificate of this platform from Udacity and made app using firebase authantication</p>
         </div>
 
         <div class="box">
             <i class="fas fa-database"></i>
             <h3>SQL</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quas delectus, laboriosam nulla dolore in.</p>
+            <p>SQL is domain-specific language used in programming and designed for managing data held in a relational database management system.</p>
         </div>
 
     </div>
