--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="box-container">
             <div class="box">
                 <h3>2+</h3>
-                <p>years of experience</p>
+                <p>live projects</p>
             </div>
             <div class="box">
                 <h3>10+</h3>
@@ -106,7 +106,7 @@
     <div class="row">
 
         <div class="progress">
-            <h3> web design <span>30%</span> </h3>
+            <h3> android studio <span>30%</span> </h3>
             <div class="bar bar-1-1"><span></span></div>
             <h3> flutter <span>75%</span> </h3>
             <div class="bar bar-1-2"><span></span></div>
@@ -144,15 +144,15 @@
         </div>
 
         <div class="box">
-            <i class="fas fa-paint-brush"></i>
+            <i class="fas fa-mobile"></i>
             <h3>flutter</h3>
             <p>flutter is used to develop cross platform applications, using this framework i had made many apps like Musify, hidden gems etc.</p>
         </div>
 
         <div class="box">
-            <i class="fas fa-mobile"></i>
+            <i class="fab fa-android"></i>
             <h3>Android Studio</h3>
-            <p>Android Studio is IDE for developing native android app . I had learned it from an online training from intershala like done project like Book hub</p>
+            <p>Android Studio is IDE for developing native android app . I had learned it from an online training from intershala and complete project like Book hub</p>
         </div>
 
         <div class="box">
