--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="box-container">
 
         <div class="box">
-            <i class="fas fa-code"></i>
+            <i class="fab fa-java"></i>
             <h3>java</h3>
             <p>java is object oriented programming language, with help of OOPs i have completed couple of projects like gun game</p>
         </div>
