--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="content">
         <h3>krishnapal sendhav</h3>
         <p>i am a student</p>
-        <a href="https://drive.google.com/file/d/1P0HNMziMXWadO4aSCSB1qtEUR48ZnkyE/view?usp=sharing" class="btn">download CV</a>
+        <a href="https://drive.google.com/file/d/1P0HNMziMXWadO4aSCSB1qtEUR48ZnkyE/view?usp=sharing" class="btn">download CV   <i class="fas fa-download"></i></a>
     </div>
 
     <div class="share">
