--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 
         <div class="box">
             <i class="fas fa-mobile"></i>
+            <img src="https://iconscout.com/icon/flutter-3445591" alt="">
             <h3>flutter</h3>
             <p>flutter is used to develop cross platform applications, using this framework i had made many apps like Musify, hidden gems etc.</p>
         </div>
@@ -188,9 +189,10 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="image/img-1.jpg" alt="">
+            <img src="image/img-1.png" alt="">
             <div class="content">
                 <h3>Gun Game</h3>
+                <p>this a game in which u can play game leading IT services Company. A single platform that addresses all your needs interactively and simplifies the communication process, this ampus to exploring a dynamic career path with TCS. <a href="https://github.com/krishnapalsendhav/Java-Game">read more</a></p>
             </div>
         </div>
 
@@ -198,6 +200,7 @@
             <img src="image/img-2.jpg" alt="">
             <div class="content">
                 <h3>Musify</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ullam sapiente dicta numquam atque omnis. Repellat laudantium delectus consequatur, sit provident eaque id ullam impedit, iusto, aperiam dolor! Rerum, possimus? <a href="https://github.com/krishnapalsendhav/youtube">read more</a></p>
             </div>
         </div>
 
@@ -205,6 +208,7 @@
             <img src="image/img-3.jpg" alt="">
             <div class="content">
                 <h3>project 03</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A natus similique tenetur veritatis soluta repellendus laborum facere, dolorem dolorum nesciunt, adipisci voluptatem aliquam veniam iste quibusdam autem, debitis optio nisi. <a href="">read more</a></p>
             </div>
         </div>
 
@@ -212,6 +216,7 @@
             <img src="image/img-4.jpg" alt="">
             <div class="content">
                 <h3>project 04</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime omnis laboriosam quos at numquam mollitia dignissimos impedit dolorem minus! Necessitatibus qui exercitationem ipsam neque provident dolor sapiente illum ex eius! <a href="">read more</a></p>
             </div>
         </div>
 
@@ -219,6 +224,7 @@
             <img src="image/img-5.jpg" alt="">
             <div class="content">
                 <h3>project 05</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus earum adipisci voluptatem cumque officiis inventore eligendi laboriosam culpa, odit explicabo quae accusantium sapiente debitis, porro dicta quia repellendus asperiores unde? <a href="">read more</a></p>
             </div>
         </div>
 
@@ -226,6 +232,7 @@
             <img src="image/img-6.jpg" alt="">
             <div class="content">
                 <h3>project 06</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime facere nihil fugit reprehenderit velit ullam recusandae aliquam dolor autem blanditiis inventore, voluptates ipsa doloremque repudiandae magnam repellat nostrum? Non, dolore. <a href="">read more</a></p>
             </div>
         </div>
 
