--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <img src="image/img-1.png" alt="">
             <div class="content">
                 <h3>Gun Game</h3>
-                <p>this a game in which u can play game leading IT services Company. A single platform that addresses all your needs interactively and simplifies the communication process, this ampus to exploring a dynamic career path with TCS. <a href="https://github.com/krishnapalsendhav/Java-Game">read more</a></p>
+                <p>This game developed using the concepts of OOPs in java. in this game there are two player and two guns you can shoot on both player using these two guns. every time the player is shooted it damage his health if armour is on then damag rate is different. <a href="https://github.com/krishnapalsendhav/Java-Game">read more</a></p>
             </div>
         </div>
 
@@ -200,7 +200,7 @@
             <img src="image/img-2.jpg" alt="">
             <div class="content">
                 <h3>Musify</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ullam sapiente dicta numquam atque omnis. Repellat laudantium delectus consequatur, sit provident eaque id ullam impedit, iusto, aperiam dolor! Rerum, possimus? <a href="https://github.com/krishnapalsendhav/youtube">read more</a></p>
+                <p>an music streaming application for both android and IOS. created using flutter for cross-platform application development. in this application user can listen song from internet and set these song as there mobile ringtone. i am working on spotify API for this app <a href="https://github.com/krishnapalsendhav/youtube">read more</a></p>
             </div>
         </div>
 
