--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="#about">about</a>
-        <a href="#services">services</a>
+        <a href="#technologies">Technologies</a>
+        <a href="#certificate">certificate</a>
         <a href="#portfolio">portfolio</a>
-        <a href="#contact">contact</a>
+        <!-- <a href="#contact">contact</a> -->
     </nav>
 
 </header>
@@ -54,11 +55,11 @@
     </div>
 
     <div class="share">
-        <a href="https://t.me/Krishna_Since_2002" class="fab fa-telegram"></a>
+        <a href="https://t.me/Krishna_Since_2002" class="fab fa-telegram-plane"></a>
         <!-- <a href="#" class="fab fa-twitter"></a> -->
-        <a href="" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/in/krishnapal-sendhav-b4884718a/" class="fab fa-linkedin"></a>
-        <a href="https://github.com/krishnapalsendhav" class="fab fa-github"></a>
+        <a href="https://stackoverflow.com/users/18768047/krishna-pal-sendhav" class="fab fa-stack-overflow"></a>
+        <a href="https://www.linkedin.com/in/krishnapal-sendhav-b4884718a/" class="fab fa-linkedin-in"></a>
+        <a href="https://github.com/krishnapalsendhav" class="fab fa-github-alt"></a>
     </div>
 
 </section>
@@ -131,7 +132,7 @@
 
 <!-- services section starts  -->
 
-<section class="services" id="services">
+<section class="services" id="technologies">
 
     <h1 class="heading"><span>Technologies</span> known </h1>
 
@@ -181,6 +182,57 @@
 <!-- services section ends -->
 
 <!-- portfolio section starts  -->
+
+<section class="portfolio" id="certificate">
+
+    <h1 class="heading"> my <span>certificates</span> </h1>
+
+    <div class="box-container">
+
+       <a href="https://www.sololearn.com/certificates/course/en/25559791/1068/landscape/png">
+
+        <div class="box">
+            <img src="image/certificates/java.png" alt="">
+            
+        </div>
+       </a>
+
+        <a href="https://www.sololearn.com/certificates/course/en/25559791/1060/landscape/png">
+            <div class="box">
+                <img src="image/certificates/sql.png" alt="">
+            </div>
+        </a>
+
+       <a href="">
+        <div class="box">
+            <img src="image/img-6.jpg" alt="">
+        </div>
+       </a>
+
+       <a href="">
+        <div class="box">
+            <img src="image/img-5.jpg" alt="">
+        </div>
+       </a>
+
+       <a href="">
+        <div class="box">
+            <img src="image/img-4.jpg" alt="">
+        </div>
+       </a>
+
+       <a href="">
+        <div class="box">
+            <img src="image/img-3.jpg" alt="">
+        </div>
+       </a>
+    </div>
+
+</section>
+
+<!-- portfolio section ends -->
+
+<!-- cetificate section start -->
 
 <section class="portfolio" id="portfolio">
 
@@ -240,7 +292,6 @@
 
 </section>
 
-<!-- portfolio section ends -->
 
 <!-- contact section starts -->
 
