--- a/index.html
+++ b/index.html
@@ -206,6 +206,17 @@
             </div>
         </a>
 
+        <a href="https://olympus1.mygreatlearning.com/course_certificate/GRHCZDMK">
+            <div class="box">
+                <img src="image/certificates/android.jpg" alt="">
+            </div>
+        </a>
+
+        <a href="https://olympus1.mygreatlearning.com/course_certificate/LHGYOLGB">
+            <div class="box">
+                <img src="image/certificates/dot_net.jpg" alt="">
+            </div>
+        </a>
       
 </section>
 
