--- a/index.html
+++ b/index.html
@@ -206,9 +206,21 @@
             </div>
         </a>
 
+        <a href="https://www.sololearn.com/certificates/course/en/25559791/1160/landscape/png">
+            <div class="box">
+                <img src="image/certificates/kotlin.png" alt="">
+            </div>
+        </a>
+
         <a href="https://olympus1.mygreatlearning.com/course_certificate/GRHCZDMK">
             <div class="box">
                 <img src="image/certificates/android.jpg" alt="">
+            </div>
+        </a>
+
+        <a href="https://olympus1.mygreatlearning.com/course_certificate/MUUWDTPJ">
+            <div class="box">
+                <img src="image/certificates/javaP.jpg" alt="">
             </div>
         </a>
 
