--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="#technologies">Technologies</a>
         <a href="#certificate">certificate</a>
         <a href="#portfolio">portfolio</a>
-        <a href="#contact">contact</a>
+        <!-- <a href="#contact">contact</a> -->
     </nav>
 
 </header>
@@ -57,9 +57,11 @@
         <a href="https://drive.google.com/file/d/1P0HNMziMXWadO4aSCSB1qtEUR48ZnkyE/view?usp=sharing" class="btn">download CV   <i class="fas fa-download"></i></a>
     </div>
 
+ 
+ 
     <div class="share">
         <a href="https://t.me/Krishna_Since_2002" class="fab fa-telegram-plane"></a>
-        <!-- <a href="#" class="fab fa-twitter"></a> -->
+        <a href="https://www.codingninjas.com/codestudio/profile/ea56dd9b-57c0-43cb-8c54-4113156df4eb" class="fas fa-user-ninja"></a>
         <a href="https://stackoverflow.com/users/18768047/krishna-pal-sendhav" class="fab fa-stack-overflow"></a>
         <a href="https://www.linkedin.com/in/krishnapal-sendhav-b4884718a/" class="fab fa-linkedin-in"></a>
         <a href="https://github.com/krishnapalsendhav" class="fab fa-github-alt"></a>
