--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
             </div>
         </a>
 
-        <a href="https://olympus1.mygreatlearning.com/course_certificate/GRHCZDMK">
+        <a href="https://trainings.internshala.com/s/v/1811330/7be708b4">
             <div class="box">
-                <img src="image/certificates/android.jpg" alt="">
+                <img src="image/certificates/android2.jpg" alt="">
             </div>
         </a>
 
@@ -231,7 +231,7 @@
                 <img src="image/certificates/dot_net.jpg" alt="">
             </div>
         </a>
-      
+
 </section>
 
 <!-- portfolio section ends -->
@@ -265,7 +265,7 @@
 
 
 <!-- contact section starts -->
-
+<!-- 
 <section class="contact" id="contact">
 
     <h1 class="heading"> <span>contact</span> me </h1>
@@ -278,7 +278,7 @@
         <input type="submit" value="send message" class="btn">
     </form>
 
-</section>
+</section> -->
 
 <!-- contact section ends -->
 
