--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 academic record and keen interest and practical exposure in the field of App Development, especially mobile 
                 applications .
                 </p>
-            <a href="#contact" class="btn">contact me</a>
+            <a href="mailto:krishnapalsendhav591@gmail.com" class="btn">contact me</a>
         </div>
 
     </div>
