--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="content">
             <h3>krishnapal sendhav</h3>
             <p>i am a student</p>
-            <a href="https://drive.google.com/file/d/1P0HNMziMXWadO4aSCSB1qtEUR48ZnkyE/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/1oTFJla57BjhpIyvy797aHbYghtG-lwEA/view?usp=share_link"
                 class="btn">download CV <i class="fas fa-download"></i></a>
         </div>
 
